--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,15 @@ git:
   depth: 1
 jdk:
   - openjdk8
-dist: trusty
-cache:
-  directories:
-    - $HOME/.m2
-deploy:
-  provider: bluemixcloudfoundry
-  skip_cleanup: true
-  username: cboudville@free.fr
-  password: $BLUEMIX_PASSWORD
-  organization: cboudville@free.fr
-  space: dev
-  region: eu-gb
+#dist: trusty
+#cache:
+#  directories:
+#    - $HOME/.m2
+#deploy:
+#  provider: bluemixcloudfoundry
+#  skip_cleanup: true
+#  username: cboudville@free.fr
+#  password: $BLUEMIX_PASSWORD
+#  organization: cboudville@free.fr
+#  space: dev
+#  region: eu-gb
