--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ jdk:
   - openjdk8
 dist: trusty
 cache:
-#  directories:
-#    - $HOME/.m2
+  directories:
+    - $HOME/.m2
 #deploy:
 #  provider: bluemixcloudfoundry
 #  skip_cleanup: true
