--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('new_password') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
   - sudo mysql_upgrade -u root -pnew_password
   - sudo service mysql restart 
-  - mysql -e 'CREATE DATABASE projet;
+  - mysql -e 'CREATE DATABASE projet;'
 #deploy:
 #  provider: bluemixcloudfoundry
 #  skip_cleanup: true
